--- a/nextpage.html
+++ b/nextpage.html
@@ -89,7 +89,7 @@
     }
 
     function submitSelection() {
-      const suggestion = document.getElementById("suggestionInput").value;
+      const suggestion = document.getElementById("suggestionInput").value.trim();
 
       if (selectedImages.length === 0 && !suggestion) {
         alert("Please select at least one image or enter a suggestion!");
@@ -106,13 +106,15 @@
         body: JSON.stringify(payload)
       })
       .then(response => {
-        if (response.ok) {
-          alert("Submitted successfully!");
-        } else {
-          alert("Failed to submit.");
+        if (!response.ok) {
+          return response.text().then(err => { throw new Error(err) });
         }
+        alert("Submitted successfully!");
       })
-      .catch(error => console.error("Error:", error));
+      .catch(error => {
+        alert("Failed to submit. Check console for details.");
+        console.error("Submission Error:", error);
+      });
     }
   </script>
 
