--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Valentine's Proposal</title>
+  <title>Para kay ano</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -109,7 +109,7 @@
 <body>
 
   <div class="key-input" id="keyScreen">
-    <h2>Enter the secret key to continue:</h2>
+    <h2>Enter your name:</h2>
     <input type="text" id="keyInput" placeholder="Enter the key">
     <button onclick="checkKey()">Submit</button>
     <p class="error-message" id="errorMessage"></p>
